Products listed by category

--- a/Front/final-project/src/index.html
+++ b/Front/final-project/src/index.html
@@ -6,6 +6,7 @@
   <title>FinalProject</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://kit.fontawesome.com/ea7d0abe07.js" crossorigin="anonymous"></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="./assets/style/themify-icons.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
